--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2670,107 +2670,107 @@ stories:
   domain: http://www.globegazette.com/
   link: https://globegazette.com/news/national/company-behind-oahu-plane-crash-did-not-have-proper-permits/article_b73884d2-910e-54ac-b089-684c1f0425ce.html
 images:
-- name: san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
-- name: powerlines-power-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
-- name: fence-fence-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-atari-missle.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-- name: ellis-island-ellisisland-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
-- name: mediterranean-mediterranean-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-diego-rivera1.jpg
-- name: razorwire-DSC-0080-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-monet-one.jpg
-- name: art-museum-art-museum-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
-- name: cargo-ship-cargo-ship-on-sea.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
-- name: blossombar-alien-goggles-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-50-62.jpg
-- name: beach-rocks-beach-rocks-currents-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alien-goggles.jpg
-- name: dragon-desert-desert-dragon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-dresden.jpg
-- name: blossombar-sand-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-00-00.jpg
-- name: rain-princess-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4746.jpg
-- name: wind-mills-windmills-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-mucha-mult.jpg
-- name: cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-- name: nyc-flag-nycflag-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
-- name: razorwire-DSC-0080-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-nazi-poster.jpg
-- name: 35562068104_fa20c57575-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-rain-princess.jpg
-- name: aws-s3-stories-new-cityscape-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-cityscape-copper-circuit.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
-- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-- name: death-valley-death-valley-national-park-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
-- name: adam-smith-adam-smith-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-pablo-blue.jpg
-- name: statue-of-liberty-front-view-statueofliberty-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-purple-pond.jpg
-- name: bordercrossing-bordercrossing-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-dali.jpg
-- name: sand-hand-sand-hand-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
-- name: curtain-curtain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-internet-numbers.jpg
-- name: hollywood-building-hollywood-building-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
-- name: beach-rocks-beach-rocks-currents-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-hot-spicy.jpg
-- name: sand-hand-sand-hand-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-- name: oldbarn-oldbarn-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kand-two.jpg
-- name: docks-docks-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-storm.jpg
-- name: fence-fence-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-marcel-duchamp.jpg
-- name: walled-garden-walled-garden-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
-- name: downtown-los-angeles-downtown-la-bright-sand.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-bright-sand.JPG
-- name: docks-docks-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
-- name: ellis-island-ellisisland-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crunch-paper.jpg
-- name: adam-smith-adam-smith-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purp-paper.jpg
-- name: amusement-park-amusement-park-2-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-neo-instinct.jpg
-- name: power-lines-power-lines-empty-space-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-hot-spicy.jpg
-- name: capital-battle-capitolbattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle.jpg
-- name: server-cloud-server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-dali.jpg
-- name: old-door-lock-old-door-lock-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alberto-giacometti.jpg
-- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
-- name: blossombar-hot-spicy-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-50-62.jpg
+- name: amusement-park-amusement-park-2-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gred-mash.jpg
+- name: hollywood-building-hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-marcel-duchamp.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-matrix.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-matrix.png
+- name: yosemite-yosemite-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-monet-one.jpg
+- name: liberty-back-statue-liberty-back-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-monet-one.jpg
+- name: store-on-corner-oldcabin-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-granite.jpg
+- name: nazi-invasion-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7162.jpg
+- name: hollywood-building-hollywood-building-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crafty-painting.jpg
+- name: meadowbutterfly-meadow-butterfly-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-plentiful.jpg
+- name: gypsymosaic-gypsy-eyes-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-storm.jpg
+- name: adam-smith-adam-smith-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-smooth-ride.jpg
+- name: server-cloud-server-racks-door-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-nazi-poster.jpg
+- name: old-gas-pumps-oldgaspumps-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-emily-carr.jpg
+- name: downtown-trucksilo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-matrix.jpg
+- name: meadowbutterfly-meadow-butterfly-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crafty-painting.jpg
+- name: old-gas-pumps-oldgaspumps-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-soul.jpg
+- name: trucksilo-trucksilo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
+- name: old-granary-field-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-color.jpg
+- name: flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+- name: server-cloud-server-racks-door-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-matrix.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
+- name: crow-crow-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
+- name: machine-road-machine-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-oily-mcoilface.jpg
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: blossombar-neo-instinct-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: server-cloud-server-racks-door-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dry-skin.jpg
+- name: art-museum-art-museum-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-3.jpg
+- name: dc-statue-dcstatue-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purp-paper.jpg
+- name: ellis-island-ellisisland-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-green-zuma.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
+- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+- name: gypsy-wagon-gypsywagon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-kand-two.jpg
+- name: oldhousecars-house-old-cars-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-rainbow-festival.jpg
+- name: flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+- name: capital-battle-capitolbattle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
+- name: capital-battle-capitolbattle-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-dream.jpg
+- name: border-crossing-bordercrossing-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-soul.png
+- name: server-cloud-server-racks-clouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kand-two.jpg
+- name: server-cloud-server-racks-door-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-5.jpg
+- name: christianity-christianity-under-construction-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
+- name: eduardo-eduardo-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-constitution.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+- name: ellis-island-ellis-island-room-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
+- name: bordercrossing-bordercrossing-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colored-circuits.jpg
+- name: paris-paris-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purple-storm.jpg
+- name: gypsy-wagon-gypsywagon-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-collage.jpg
+- name: ellis-island-ellisisland-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
+- name: subway-subway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
 ---
 Christian Concert Planned For Stevenson Unit Chapel Fundraiser.&nbsp;Labor Secretary Acosta Resigns Amid Epstein Deal Scrutiny.&nbsp;Here Are The Most Expensive Things You Can Eat At Encore Boston Harbor.&nbsp;Barry's Outer Bands Begin Lashing Southeastern Louisiana.&nbsp;Spring Ho Festival To Kick Off Monday.&nbsp;How Shodeen's Plans For Former Mill Race Inn Property Could Affect Island Park.&nbsp;Catalan Chief To Face Trial For Displaying Secession Symbols.&nbsp;Former Dolphin Andre Branch Lists Tree House Bachelor Pad In Fort Lauderdale.&nbsp;
